Added option to VM configuration which allows setting the JNLP tunnel option

--- a/src/main/resources/com/microsoft/azure/vmagent/AzureVMAgentTemplate/config.properties
+++ b/src/main/resources/com/microsoft/azure/vmagent/AzureVMAgentTemplate/config.properties
@@ -21,7 +21,7 @@ Image_Sku=Image Sku
 Image_Version=Image Version
 
 Launch_Method=Launch Method
-
+Tunnel=Tunnel
 Initialization_Configuration=VM First Startup Configuration
 Init_Script=Initialization Script
 Execute_Init_Script_As_Root=Run Initialization Script As Root (Linux Only)
